# NaviDiv

./: .gitignore  README.rst  app.py  compare_app.py  fragments.csv  pyproject.toml  streamlit_app.py  working_environment.yml
.github/: copilot-instructions.md
.github/prompts/: clean_code.prompt.md
data/formed/: Initial_SF_molecules_in_Formed.csv
examples/: df_original.csv  do_foo.py  grouped_by_df.csv  rdkit_scaffold_network_example.ipynb  rdkit_scaffold_network_example.py  scaffold_generator.py  scaffold_network.java  scaffold_network.py  stage0_1_TSNE.csv  stage0_1_TSNE_TSNE.csv  test.py  test_agregate_clusters.py  test_evolution.py  test_groupby.py  test_reinvent_optimize.py
reinvent_runs/: environment.yml  environment_NAVI_DIV.yml  run_reinvent.sh  run_reinvent_test.sh  run_reinvent_test2.sh  run_transfer_learning.sh  test_yaml.py
reinvent_runs/TL/: transfer_learning.toml
reinvent_runs/conf_folder/: default_config.toml  test.yaml  transfer_learning.yaml
reinvent_runs/mol2mol/: staged_learning_2_TSNE.csv  staged_learning_2_TSNE_TSNE.csv  staged_learning_2_TSNE_tmp.csv  staged_learning_2_TSNE_tmp_with_scaffold_and_families.csv  target.csv
src/millie/: __init__.py
src/navidiv/: FGscorer.py  Ngram_scorer.py  Scaffold_scorer.py  __init__.py  cluster_similarity_scorer.py  fg_scorer.py  get_tsne.py  orginal_similarity_scorer.py  ring_scorer.py  run_all_scorers.py  scorer.py  utils.py
tests/: fragments.csv  test.py  test_agregate_clusters.py  test_cluster_minimal.py  test_clusters.py  test_evolution.py  test_fingerprint_generation.py  test_foo.py  test_fragmentation_new.py  test_fragmentation_new2.py  test_get_fragment.py  test_groupby.py  test_reinvent_optimize.py  test_scaffold.py  test_scorer_compatibility.py  test_similarity_scorers.py
(+183 files in other folders)
